# debate-agents

./: LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: celery_app.py  debate_orchestration.py  (+1 more)
debate/: .env.example  .gitignore  README.md  api.py  app.py  debate_round.json  debate_strategist_verdict.md  docker-compose.yml  index.html  logical_analyst_verdict.md  persuasion_verdict.md  pyproject.toml  test_debate.py  verify_ws.py
debate/app/: cache.py  celery_app.py  debate_orchestration.py  dependencies.py  main.py
debate/app/core/: config.py
debate/app/db/: __init__.py  base.py  models.py  session.py
debate/app/helpers/: __init__.py  debate_helpers.py
debate/app/routers/: debates.py  health.py
debate/app/services/: debate_service.py
debate/data/: debate.db
debate/docker/: entrypoint.sh
debate/knowledge/: greta.yaml  ricky_gervais.yaml  trump.yaml
debate/output/: decide.md  oppose.md  propose.md
debate/personas/: bassem_yousuf.yaml
debate/src/: crew.py  events.py  flow.py  helpers.py  models.py  pricing.py  prompts.py  schemas.py  storage.py  utils.py
debate/src/config/: agents.yaml  tasks.yaml
debate/src/debate/: crew.py  main.py  models.py  utils.py
debate/src/debate/config/: agents.yaml  tasks.yaml
debate/src/tools/: search_tool.py
debate/tests/: test_cache.py  test_retry_utils.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  test_websocket.ts
(+157 files in other folders)
