[project]
name = "debate"
version = "0.1.0"
description = "Debate Agents using CrewAI"
authors = [{ name = "Mian Maaz Ullah Khan", email = "mmaazkhan@outlook.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "apscheduler>=3.11.2",
    "bcrypt>=5.0.0",
    "crewai[tools]==1.8.0",
    "ddgs>=9.10.0",
    "duckduckgo-search",
    "fastapi>=0.128.0",
    "fastapi-sso>=0.17.0",
    "langchain-community",
    "litellm>=1.75.3",
    "passlib>=1.7.4",
    "psycopg>=3.3.2",
    "pydantic[email]>=2.11.10",
    "redis>=5.0.1",
    "tenacity>=9.1.2",
    "websockets>=16.0",
]

[project.scripts]
debate = "debate.main:run"
run_crew = "debate.main:run"
train = "debate.main:train"
replay = "debate.main:replay"
test = "debate.main:test"
run_with_trigger = "debate.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"

[tool.hatch.build.targets.wheel]
packages = ["debate"]

[tool.hatch.build.targets.sdist]
include = [
  "debate/**",
  "api.py",
  "pyproject.toml",
  "README.md"
]
